--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,27 @@
 $badass: #bada55;
+
 body { 
-  margin: 0; 
-  background-color: $badass; 
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  padding: 0;
+  margin: 60px 0 0 0;
+  background: white;
+}
+
+.panel {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  border: 1px solid #e9e9e9;
+  background-color: white;
+  color: #666;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: 0.3s;
+  z-index: 200;
+  width: 0;
+  max-width: 90%;
+
+  .title {
+    padding: 10px
+  }
 }
