--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,3 +25,81 @@ body {
     padding: 10px
   }
 }
+
+.fullscreen {
+  position: fixed;
+  z-index: 1000;
+  background-color: black;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .previous {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    bottom: 0;
+    width: 150px;
+    cursor: pointer;
+  }
+
+  .next {
+    position: absolute;
+    top: 40px;
+    right: 0;
+    bottom: 0;
+    width: 150px;
+    cursor: pointer;
+  }
+
+  .title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    font-size: 2em;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    opacity:0;
+    transition:opacity 1s linear;
+    z-index: 1100;
+
+    .close {
+      position: absolute;
+      top: 0;
+      left: 10px;
+      cursor: pointer;
+    }
+
+    .options {
+      position: absolute;
+      top: 0;
+      right: 10px;
+      cursor: pointer;
+    }
+  }
+
+  .show {
+    opacity: 1;
+  }
+
+  .opt {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    background-color: #fff;
+    border-right: 1px solid #e9e9e9;
+    color: #666;
+    padding-top: 40px;
+  }
+}
