--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,34 @@ body {
   background: white;
 }
 
+header {
+  background-color: #222;
+  color: white;
+  padding: 10px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 100;
+
+  .title {
+    float: left;
+    font-size: 1.3em;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+
+nav {
+  .navbar-left {
+    float: left;
+  }
+
+  .navbar-right {
+    float: right;
+  }
+}
+
 .panel {
   position: fixed;
   top: 0;
@@ -24,6 +52,37 @@ body {
   .title {
     padding: 10px
   }
+}
+
+.menu {
+  position: fixed;
+  top: 50px;
+  width: 300px;
+  right: 0;
+  z-index: 200;
+  background-color: #fff;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e9e9e9;
+  border-radius: 3px;
+  color: #666;
+  max-height:100%;
+  overflow: scroll;
+  transition: 0.3s;
+  height: 0;
+}
+
+.left {
+  left: 0;
+}
+
+.click {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 190;
 }
 
 .fullscreen {
@@ -103,3 +162,237 @@ body {
     padding-top: 40px;
   }
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+
+  .item {
+    margin: 1px;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+
+    .select {
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: 30px;
+      height: 30px;
+      z-index: 10;
+      cursor: pointer;
+    }
+
+    .mark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 5;
+    }
+
+    img {
+      user-select: none;
+    }
+  }
+
+  .item:hover {
+    .mark {
+      background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.23) 23%,rgba(0,0,0,0.04) 34%,rgba(0,0,0,0) 36%);
+    }
+  }
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+
+  li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    user-select: none;
+    text-align: left;
+  }
+
+  li:hover {
+    background-color: #e7f4fd;
+  }
+
+  li.selected {
+    background-color: #e7f4fd;
+    color: #108ee9;
+    border-right: 3px solid #108ee9;
+    padding: 10px 15px;
+  }
+
+  li.disabled {
+    color: #aaa;
+  }
+
+  li.action {
+    padding: 10px 15px;
+  }
+
+  .divider {
+    height: 1px;
+    margin: 0;
+    overflow: hidden;
+    background-color: #e5e5e5;
+  }
+}
+
+.modal {
+  position: fixed;
+
+  width: 500px;
+  height: 500px;
+  margin: 5% auto;
+  left: 0;
+  right: 0;
+
+  top: 0;
+
+  max-width: 95%;
+  max-height: 95%;
+
+  background-color: #fff;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e9e9e9;
+  border-radius: 3px;
+
+  color: #666;
+
+  z-index: 500;
+
+  .title {
+    border-bottom: 1px solid #e9e9e9;
+    padding: 10px;
+  }
+
+  .body {
+    padding: 5px 10px;
+    position: absolute;
+    top: 39px;
+    left: 0;
+    right: 0;
+    bottom: 39px;
+    overflow: auto;
+  }
+
+  .bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    border-top: 1px solid #e9e9e9;
+  }
+}
+
+.inlineProgress {
+  display: inline-block;
+  width: 100px;
+  height: 10px;
+  border: 1px solid #e9e9e9;
+  border-radius: 3px;
+  position: relative;
+  background-color: red;
+
+  .green {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background-color: green;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+  }
+}
+
+.drag {
+  z-index: 10000;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: red;
+}
+
+.dimming {
+  position: fixed;
+  z-index: 499;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity:0.7;
+}
+
+span.error {
+  color: red;
+}
+
+span.success {
+  color: green;
+}
+
+input[type=range] {
+  background: transparent;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  border: 1px solid #000000;
+}
+
+.select {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 24px;
+  font-weight: bold;
+  visibility: hidden;
+}
+
+.preloaded {
+  background: #eee;
+} 
+
+.selected > .mark, .selected:hover > .mark {
+  border: 10px solid blue;
+}
+
+.item:hover > .select, .date:hover > .select {
+  visibility: visible;
+}
+
+.date {
+  width: 100%;
+  margin: 10px 0 5px 5px;
+  font-size: 0.9em;
+}
+
+.options {
+  user-select: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 500px) {
+    .min500 {
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .max500 {
+    }
+}
+
