--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-$badass: #bada55;
+$borderColor: #e9e9e9;
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -39,7 +39,7 @@ nav {
   position: fixed;
   top: 0;
   bottom: 0;
-  border: 1px solid #e9e9e9;
+  border: 1px solid $borderColor;
   background-color: white;
   color: #666;
   overflow-y: auto;
@@ -63,7 +63,7 @@ nav {
   background-color: #fff;
   border-style: solid;
   border-width: 1px;
-  border-color: #e9e9e9;
+  border-color: $borderColor;
   border-radius: 3px;
   color: #666;
   max-height:100%;
@@ -157,7 +157,7 @@ nav {
     bottom: 0;
     width: 300px;
     background-color: #fff;
-    border-right: 1px solid #e9e9e9;
+    border-right: 1px solid $borderColor;
     color: #666;
     padding-top: 40px;
   }
@@ -264,7 +264,7 @@ ul {
   background-color: #fff;
   border-style: solid;
   border-width: 1px;
-  border-color: #e9e9e9;
+  border-color: $borderColor;
   border-radius: 3px;
 
   color: #666;
@@ -272,7 +272,7 @@ ul {
   z-index: 500;
 
   .title {
-    border-bottom: 1px solid #e9e9e9;
+    border-bottom: 1px solid $borderColor;
     padding: 10px;
   }
 
@@ -292,7 +292,7 @@ ul {
     left: 0;
     right: 0;
     padding: 10px;
-    border-top: 1px solid #e9e9e9;
+    border-top: 1px solid $borderColor;
   }
 }
 
@@ -300,7 +300,7 @@ ul {
   display: inline-block;
   width: 100px;
   height: 10px;
-  border: 1px solid #e9e9e9;
+  border: 1px solid $borderColor;
   border-radius: 3px;
   position: relative;
   background-color: red;
