--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,7 @@
 $borderColor: #e9e9e9;
+$selectedBackgroundColor: #e7f4fd;
+$selectedColor: #108ee9;
+$hoverBackgroundColor: #e7f4fd;
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -50,7 +53,7 @@ nav {
   max-width: 90%;
 
   .title {
-    padding: 10px
+    padding: 10px;
   }
 }
 
@@ -221,13 +224,13 @@ ul {
   }
 
   li:hover {
-    background-color: #e7f4fd;
+    background-color: $hoverBackgroundColor;
   }
 
   li.selected {
-    background-color: #e7f4fd;
-    color: #108ee9;
-    border-right: 3px solid #108ee9;
+    background-color: $selectedBackgroundColor;
+    color: $selectedColor;
+    border-right: 3px solid $selectedColor;
     padding: 10px 15px;
   }
 
