--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,14 @@ header {
 }
 
 nav {
+  .item {
+    padding: 4px;
+  }
+
+  .item:hover {
+    color: $selectedColor;
+  }
+
   .navbar-left {
     float: left;
   }
