--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,38 +18,56 @@ body {
 header {
   background-color: #222;
   color: white;
-  padding: 10px;
   position: fixed;
   left: 0;
   top: 0;
   right: 0;
   z-index: 100;
+  height: 40px;
+  line-height: 1;
+  user-select: none;
 
   .title {
     float: left;
-    font-size: 1.3em;
     cursor: pointer;
-    user-select: none;
+    
+    background-color: red;
+
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  >nav {
+    .left {
+      float: left;
+    }
+
+    .right {
+      float: right;
+    }
+
+    >ul {
+      padding: 0;
+      margin: 0;
+
+      >li {
+        margin: 0;
+        float: left;
+        list-style: none;
+        font-size: 20px;
+        line-height: 1;
+        padding: 10px;
+      }
+
+      >li:hover {
+        color: $selectedColor;
+        background-color: green;
+      }
+    }
   }
 }
 
-nav {
-  .item {
-    padding: 4px;
-  }
 
-  .item:hover {
-    color: $selectedColor;
-  }
-
-  .navbar-left {
-    float: left;
-  }
-
-  .navbar-right {
-    float: right;
-  }
-}
 
 .selected {
   color: $selectedColor;
@@ -91,7 +109,7 @@ nav {
 
 .menu {
   position: fixed;
-  top: 50px;
+  top: 40px;
   width: 300px;
   right: 0;
   z-index: 200;
@@ -242,11 +260,11 @@ nav {
   }
 }
 
-ul {
+ul.options {
   padding: 0;
   margin: 0;
 
-  li {
+  >li {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -255,26 +273,26 @@ ul {
     text-align: left;
   }
 
-  li:hover {
+  >li:hover {
     background-color: $hoverBackgroundColor;
   }
 
-  li.selected {
+  >li.selected {
     background-color: $selectedBackgroundColor;
     color: $selectedColor;
     border-right: 3px solid $selectedColor;
     padding: 10px 15px;
   }
 
-  li.disabled {
+  >li.disabled {
     color: #aaa;
   }
 
-  li.action {
+  >li.action {
     padding: 10px 15px;
   }
 
-  .divider {
+  >.divider {
     height: 1px;
     margin: 0;
     overflow: hidden;
@@ -414,11 +432,6 @@ input[type=range] {
   width: 100%;
   margin: 10px 0 5px 5px;
   font-size: 0.9em;
-}
-
-.options {
-  user-select: none;
-  cursor: pointer;
 }
 
 .button {
