--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,11 +30,8 @@ header {
   .title {
     float: left;
     cursor: pointer;
-    
-    background-color: red;
-
-    font-size: 20px;
-    padding: 10px;
+    font-size: 16px;
+    padding: 12px;
   }
 
   >nav {
@@ -50,18 +47,18 @@ header {
       padding: 0;
       margin: 0;
 
-      >li {
+      >li.btn {
         margin: 0;
         float: left;
         list-style: none;
         font-size: 20px;
         line-height: 1;
         padding: 10px;
+        cursor: pointer;
       }
 
-      >li:hover {
+      >li.btn:hover {
         color: $selectedColor;
-        background-color: green;
       }
     }
   }
@@ -412,7 +409,6 @@ input[type=range] {
   cursor: pointer;
   display: inline-block;
   font-size: 24px;
-  font-weight: bold;
   visibility: hidden;
 }
 
