--- a/scss/main.scss
+++ b/scss/main.scss
@@ -70,10 +70,6 @@ header {
   padding-left: $navigationPanelWidth;
 }
 
-.selected {
-  color: $selectedColor;
-}
-
 .badge {
   position: absolute;
   top: 0;
@@ -257,6 +253,11 @@ header {
       height: 30px;
       z-index: 10;
       cursor: pointer;
+      padding: 5px;
+    }
+
+    .select:hover {
+      color: $selectedColor;
     }
 
     .mark {
@@ -300,7 +301,6 @@ ul.options {
 
   >li.selected {
     background-color: $selectedBackgroundColor;
-    color: $selectedColor;
     border-right: 3px solid $selectedColor;
     padding: 10px 15px;
   }
@@ -445,7 +445,7 @@ input[type=range] {
   border: 10px solid blue;
 }
 
-.item:hover > .select, .date:hover > .select {
+.item:hover > .select, .date:hover > .dateSelect {
   visibility: visible;
 }
 
@@ -453,7 +453,21 @@ input[type=range] {
   width: 100%;
   margin: 10px 0 5px 5px;
   font-size: 0.9em;
+
+  >.dateText:hover,>.dateSelect:hover {
+    cursor: pointer;
+    color: $selectedColor;
+  }
+
+  >.dateSelect {
+    visibility: hidden;
+    display: inline-block;
+    cursor: pointer;
+    padding: 5px;
+  }
 }
+
+
 
 .button {
   border: 1px solid $borderColor;
