--- a/scss/main.scss
+++ b/scss/main.scss
@@ -232,6 +232,11 @@ header {
   }
 }
 
+.like {
+  padding: 5px;
+  cursor: pointer;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -256,8 +261,16 @@ header {
       padding: 5px;
     }
 
-    .select:hover {
+    .select:hover, .like:hover {
       color: $selectedColor;
+    }
+
+    .like {
+      position: absolute;
+      display: block;
+      top: 0;
+      right: 0;
+      z-index: 10;
     }
 
     .mark {
