--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+
+
 $color: #666;
 $borderColor: #e9e9e9;
 $selectedBackgroundColor: #e7f4fd;
@@ -5,6 +7,9 @@ $selectedColor: #108ee9;
 $hoverBackgroundColor: #e7f4fd;
 
 $navigationPanelWidth: 300px;
+
+@import 'modal';
+@import 'panel';
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -78,41 +83,7 @@ header {
   cursor: pointer;
 }
 
-.panel {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  border: 1px solid $borderColor;
-  background-color: white;
-  color: #666;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transition: 0.3s;
-  z-index: 200;
-  width: 0;
-  max-width: 90%;
 
-  .body {
-    overflow-x: scroll;
-    position: absolute;
-    top: 38px;
-    bottom: 38px;
-    left: 0;
-    right: 0;
-  }
-
-  .title {
-    padding: 10px;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-top: 1px solid $borderColor;
-  }
-}
 
 .profile {
   padding: 10px;
@@ -304,6 +275,16 @@ header {
       color: $selectedColor;
     }
   }
+
+  .selected {
+    .mark {
+      border: 10px solid $selectedColor;
+    }
+  }
+}
+
+.selected {
+  color: $selectedColor;
 }
 
 ul.options {
@@ -347,54 +328,7 @@ ul.options {
   }
 }
 
-.modal {
-  position: fixed;
 
-  width: 500px;
-  height: 500px;
-  margin: 5% auto;
-  left: 0;
-  right: 0;
-
-  top: 0;
-
-  max-width: 95%;
-  max-height: 95%;
-
-  background-color: #fff;
-  border-style: solid;
-  border-width: 1px;
-  border-color: $borderColor;
-  border-radius: 3px;
-
-  color: #666;
-
-  z-index: 500;
-
-  .title {
-    border-bottom: 1px solid $borderColor;
-    padding: 10px;
-  }
-
-  .body {
-    padding: 5px 10px;
-    position: absolute;
-    top: 39px;
-    left: 0;
-    right: 0;
-    bottom: 39px;
-    overflow: auto;
-  }
-
-  .bottom {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px;
-    border-top: 1px solid $borderColor;
-  }
-}
 
 .inlineProgress {
   display: inline-block;
@@ -457,9 +391,7 @@ input[type=range] {
   background: #eee;
 } 
 
-.selected > .mark, .selected:hover > .mark {
-  border: 10px solid $selectedColor;
-}
+
 
 .date:hover > .dateSelect {
   visibility: visible;
@@ -482,8 +414,6 @@ input[type=range] {
     padding: 5px;
   }
 }
-
-
 
 .button {
   border: 1px solid $borderColor;
