--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@ $navigationPanelWidth: 300px;
 
 @import 'modal';
 @import 'panel';
+@import 'autocomplete';
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -201,6 +202,19 @@ header {
     color: #666;
     padding-top: 40px;
   }
+}
+
+.empty {
+  width: 100%;
+  height: 100%;
+  font-size: 2em;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.empty:hover {
+  font-weight: bold;
 }
 
 .container {
