--- a/scss/autocomplete.scss
+++ b/scss/autocomplete.scss
@@ -61,6 +61,7 @@
       z-index: 200;
 
       li {
+        position: relative;
         list-style: none;
         color: black;
         font-size: 14px;
@@ -68,6 +69,7 @@
         margin: 0;
         border: 1px solid #e9e9e9;
         background-color: white;
+        cursor: pointer;
       }
 
       li.marked {
