--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1,16 +1,25 @@
+.dimming {
+  position: fixed;
+  z-index: 199;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity:0.7;
+}
+
 .modal {
   position: fixed;
 
   width: 500px;
-  height: 500px;
-  margin: 5% auto;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
   right: 0;
-
-  top: 0;
-
-  max-width: 95%;
-  max-height: 95%;
+  top: 5%;
+  bottom: 5%;
 
   background-color: #fff;
   border-style: solid;
