--- a/scss/panel.scss
+++ b/scss/panel.scss
@@ -1,35 +1,42 @@
-.panel {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  border: 1px solid $borderColor;
-  background-color: white;
-  color: #666;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transition: 0.3s;
-  z-index: 200;
-  width: 0;
-  max-width: 90%;
-
-  .body {
-    overflow-x: scroll;
-    position: absolute;
-    top: 38px;
-    bottom: 38px;
-    left: 0;
-    right: 0;
-  }
-
-  .title {
-    padding: 10px;
-  }
-
-  .footer {
-    position: absolute;
+.panelm {
+  >.panel {
+    position: fixed;
+    top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
-    border-top: 1px solid $borderColor;
+    
+    background-color: white;
+    color: #666;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: 0.3s;
+    z-index: 200;
+    width: 0;
+    max-width: 90%;
+
+    .body {
+      overflow-x: scroll;
+      position: absolute;
+      top: 38px;
+      bottom: 38px;
+      left: 0;
+      right: 0;
+    }
+
+    .title {
+      padding: 10px;
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      border-top: 1px solid $borderColor;
+    }
+  }
+
+  >.open {
+    border: 1px solid $borderColor;
+    width: $navigationPanelWidth;
   }
 }
