--- a/scss/main.scss
+++ b/scss/main.scss
@@ -149,6 +149,20 @@ header {
     max-height: 100%;
   }
 
+  .faces {
+    position: absolute;
+    z-index: 1100;
+    top: 0;
+    background-color: red;
+    opacity:0.7;
+
+    .face {
+      border: 5px solid green;
+      background: red;
+      position: absolute;
+    }
+  }
+
   .previous {
     position: absolute;
     top: 40px;
