--- a/scss/main.scss
+++ b/scss/main.scss
@@ -149,23 +149,46 @@ header {
     max-height: 100%;
   }
 
+  .hide {
+    visibility: none;
+  }
+
   .faces {
     position: absolute;
     z-index: 1100;
     top: 0;
+    visibility: visible;
+    transition:opacity 1s linear;
 
     .face {
-      border-style: solid;
-      border-width: 5px;
-      border-color: green;
-      position: absolute;
-    }
+      .border {
+        border-style: solid;
+        border-width: 5px;
+        border-color: white;        
+        position: absolute;
+      }
 
-    .name {
-      color: white;
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-      position: absolute;
-      text-align: left;
+      .borderCreate {
+        border-color: $selectedColor;
+      }
+
+      .field {
+        width: 160px;
+        height: 20px;
+        position: absolute;
+      }
+
+      .name {
+        color: white;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        position: absolute;
+        text-align: left;
+
+        a {
+          text-decoration: none;
+          color: $color;
+        }
+      }
     }
   }
 
