--- a/scss/main.scss
+++ b/scss/main.scss
@@ -163,6 +163,8 @@ header {
         position: absolute;
       }
 
+
+
       .borderCreate {
         border-color: $selectedColor;
       }
@@ -182,6 +184,17 @@ header {
         a {
           text-decoration: none;
           color: $color;
+        }
+      }
+    }
+
+    .face:hover {
+      .border {
+        div {
+          width: 100%;
+          height: 100%;
+          background-color: white;
+          opacity: 0.3;
         }
       }
     }
