--- a/scss/main.scss
+++ b/scss/main.scss
@@ -157,6 +157,16 @@ header {
     transition:opacity 1s linear;
 
     .face {
+
+
+      .clickCatcher {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1110;
+      }
       .border {
         border-style: solid;
         border-width: 5px;
@@ -172,6 +182,7 @@ header {
         width: 160px;
         height: 20px;
         position: absolute;
+        z-index: 1111;
       }
 
       .name {
