Improve handling by adding auto focus.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -172,6 +172,7 @@ header {
         border-width: 5px;
         border-color: white;        
         position: absolute;
+        cursor: pointer;
       }
 
       .borderCreate {
