Change color for name.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -194,7 +194,7 @@ header {
 
         a {
           text-decoration: none;
-          color: $color;
+          color: white;
         }
       }
     }
