Add persons to detail view.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,6 +196,11 @@ header {
           text-decoration: none;
           color: white;
         }
+
+        .remove:hover {
+          color: $selectedColor;
+          cursor: pointer;
+        }
       }
     }
 
