Add persons settings.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@ $navigationPanelWidth: 300px;
 @import 'modal';
 @import 'panel';
 @import 'autocomplete';
+@import 'settings';
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
