--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -1,3 +1,17 @@
+a {
+  text-decoration: none;
+  color: $color;
+}
+
+a:hover {
+  color: $selectedColor;
+}
+
+.quickedit {
+  padding: 0;
+  margin: 0;
+}
+
 .settings {
   width: 600px;
   max-width: 90%;
@@ -6,14 +20,42 @@
 
   table {
     border-spacing: 0;
-    border-collapse: separate;
     border-radius: 3px;
     width: 100%;
+
+    tr:nth-child(even) {background: #f1f1f1}
+    tr:nth-child(odd) {background: #FFF}
+
+    tr:first-child {
+      th:first-child {
+        border-radius:5px 0 0 0;
+      }
+
+      th:last-child {
+        border-radius:0 5px 0 0;
+      }
+    }
+
+    tr:last-child {
+      td:first-child {
+        border-radius:0 0 0 5px;
+      }
+
+      td:last-child {
+        border-radius: 0 0 5px 0;
+      }
+    }
 
     tr {
       td, th {
         border: 1px solid $borderColor;
-        padding: 5px;
+        padding: 7px;
+      }
+
+      .option {
+        width: 40px;
+        text-align: center;
+        cursor: pointer;
       }
     }
 
