--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,8 @@ $navigationPanelWidth: 300px;
 @import 'panel';
 @import 'autocomplete';
 @import 'settings';
+@import 'fullscreen';
+@import 'images';
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -134,136 +136,7 @@ header {
   z-index: 190;
 }
 
-.fullscreen {
-  position: fixed;
-  z-index: 1000;
-  background-color: black;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .faces {
-    position: absolute;
-    z-index: 1100;
-    top: 0;
-    opacity:0;
-    transition:opacity 1s linear;
-
-    .face {
-      .clickCatcher {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 1110;
-      }
-      .border {
-        border-style: solid;
-        border-width: 5px;
-        border-color: white;        
-        position: absolute;
-        cursor: pointer;
-      }
-
-      .borderCreate {
-        border-color: $selectedColor;
-      }
-
-      .field {
-        width: 160px;
-        height: 20px;
-        position: absolute;
-        z-index: 1111;
-      }
-
-      .name {
-        color: white;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-        position: absolute;
-        text-align: left;
-
-        a {
-          text-decoration: none;
-          color: white;
-        }
-
-        .remove:hover {
-          color: $selectedColor;
-          cursor: pointer;
-        }
-      }
-    }
-
-    .face:hover {
-      .border {
-        div {
-          width: 100%;
-          height: 100%;
-          background-color: white;
-          opacity: 0.3;
-        }
-      }
-    }
-  }
-
-  .previous {
-    position: absolute;
-    top: 40px;
-    left: 0;
-    bottom: 0;
-    width: 150px;
-    cursor: pointer;
-  }
-
-  .next {
-    position: absolute;
-    top: 40px;
-    right: 0;
-    bottom: 0;
-    width: 150px;
-    cursor: pointer;
-  }
-
-  .title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 40px;
-    font-size: 2em;
-    color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    opacity:0;
-    transition:opacity 1s linear;
-    z-index: 1201;
-
-    .close {
-      position: absolute;
-      top: 0;
-      left: 10px;
-      cursor: pointer;
-    }
-
-    .options {
-      position: absolute;
-      top: 0;
-      right: 10px;
-      cursor: pointer;
-    }
-  }
-
-  .show {
-    opacity: 1;
-  }
-}
 
 .empty {
   width: 100%;
@@ -278,85 +151,7 @@ header {
   font-weight: bold;
 }
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
 
-  .item {
-    margin: 1px;
-    position: relative;
-    overflow: hidden;
-    padding: 0;
-
-    .select {
-      position: absolute;
-      display: block;
-      top: 0;
-      left: 0;
-      width: 30px;
-      height: 30px;
-      z-index: 10;
-      cursor: pointer;
-      padding: 5px;
-      visibility: hidden;
-    }
-
-    .like {
-      position: absolute;
-      display: block;
-      top: 0;
-      right: 0;
-      z-index: 10;
-      width: 30px;
-      height: 30px;
-      padding: 5px;
-      cursor: pointer;
-      visibility: hidden;
-      text-align: right;
-    }
-
-    .mark {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 5;
-    }
-
-    img {
-      user-select: none;
-    }
-  }
-
-  .item:hover {
-    .mark {
-      background: linear-gradient(to bottom, rgba(0,0,0,0.65) 21%,rgba(0,0,0,0.65) 26%,rgba(0,0,0,0) 60%,rgba(0,0,0,0) 62%);
-    }
-
-    .select {
-      color: white;
-      visibility: visible;
-    }
-
-    .like {
-      color: white;
-      visibility: visible;
-    }    
-
-    .like:hover, .select:hover {
-      color: $selectedColor;
-    }
-  }
-
-  .selected {
-    .mark {
-      border: 10px solid $selectedColor;
-    }
-  }
-}
 
 .selected {
   color: $selectedColor;
