--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@ $navigationPanelWidth: 300px;
 @import 'settings';
 @import 'fullscreen';
 @import 'images';
+@import 'options';
 
 body { 
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -157,46 +158,7 @@ header {
   color: $selectedColor;
 }
 
-ul.options {
-  padding: 0;
-  margin: 0;
 
-  >li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    user-select: none;
-    text-align: left;
-    position: relative;
-  }
-
-  >li:hover {
-    background-color: $hoverBackgroundColor;
-  }
-
-  >li.selected {
-    background-color: $selectedBackgroundColor;
-    border-right: 3px solid $selectedColor;
-    padding: 10px 15px;
-  }
-
-  >li.disabled {
-    color: #aaa;
-  }
-
-  >li.action {
-    padding: 10px 15px;
-    cursor: pointer;
-  }
-
-  >.divider {
-    height: 1px;
-    margin: 0;
-    overflow: hidden;
-    background-color: #e5e5e5;
-  }
-}
 
 
 
