--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,16 +21,7 @@ body {
   background: white;
 }
 
-.selection {
-  position: fixed;
-  background-color: $selectedColor;
-  color: white;
-  bottom: 0;
-  right: 20px;
-  width: 100px;
-  height: 30px;
-  border: 5px solid white;
-}
+
 
 h3 {
   padding-left: 5px;
@@ -47,6 +38,19 @@ h3 {
   transition: 0.3s;
 }
 
+.selection {
+  position: absolute;
+  background-color: $selectedColor;
+  color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 40px;
+  z-index: 850;
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
+}
+
 header {
   background-color: #222;
   color: white;
@@ -55,6 +59,9 @@ header {
   top: 0;
   right: 0;
   z-index: 100;
+}
+
+header,.selection {
   height: 40px;
   line-height: 1;
   user-select: none;
