--- a/scss/main.scss
+++ b/scss/main.scss
@@ -86,18 +86,21 @@ header,.selection {
       padding: 0;
       margin: 0;
 
-      >li.btn {
+      >li {
         margin: 0;
         float: left;
         list-style: none;
         font-size: 16px;
         line-height: 1;
         padding: 12px;
+      }
+
+      >li.btn {
         cursor: pointer;
       }
 
       >li.btn:hover {
-        color: $selectedColor;
+        color: $hoverBackgroundColor;
       }
     }
   }
