--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,9 +1,9 @@
-input, button {
+input[type=text], button {
   color: #373a3c;
   background-color: #fff;
   display: inline-block;
   font-weight: 400;
-  line-height: 1.25;
+  line-height: 1;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
@@ -31,8 +31,40 @@ button {
   margin: 0 .1rem;
   font-size: 1rem;
   border-radius: .25rem;
+  opacity: 0.9;
 }
 
 button:hover {
+  opacity: 1;
   background-color: #efefef;
+}
+
+button.primary {
+  border-color: #0275d8;
+  background-color: #0275d8;
+}
+
+button.success {
+  border-color: #5cb85c;
+  background-color: #5cb85c;
+}
+
+button.info {
+  border-color: #5bc0de;
+  background-color: #5bc0de;
+}
+
+button.warning {
+  border-color: #f0ad4e;
+  background-color: #f0ad4e;
+  color: #fff;
+}
+
+button.warning:hover {
+
+}
+
+button.danger {
+  background-color: #d9534f;
+  color: #fff;
 }
