--- a/scss/form.scss
+++ b/scss/form.scss
@@ -3,7 +3,7 @@ input[type=text], button {
   background-color: #fff;
   display: inline-block;
   font-weight: 400;
-  line-height: 1;
+  line-height: 1.25;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
@@ -16,21 +16,7 @@ input[type=text], button {
 }
 
 button {
-  color: #373a3c;
-  background-color: #fff;
-  display: inline-block;
-  font-weight: 400;
-  line-height: 1.25;
   text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  user-select: none;
-  border: 1px solid #ccc;
-  padding: .2rem 1rem;
-  margin: 0 .1rem;
-  font-size: 1rem;
-  border-radius: .25rem;
   opacity: 0.9;
 }
 
@@ -39,19 +25,27 @@ button:hover {
   background-color: #efefef;
 }
 
+button:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 button.primary {
   border-color: #0275d8;
   background-color: #0275d8;
+  color: #fff;
 }
 
 button.success {
   border-color: #5cb85c;
   background-color: #5cb85c;
+  color: #fff;
 }
 
 button.info {
   border-color: #5bc0de;
   background-color: #5bc0de;
+  color: #fff;
 }
 
 button.warning {
@@ -60,11 +54,23 @@ button.warning {
   color: #fff;
 }
 
-button.warning:hover {
-
-}
-
 button.danger {
   background-color: #d9534f;
   color: #fff;
+}
+
+.group {
+  * {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  *:first-child {
+    border-radius:.25rem 0 0 .25rem;
+  }
+
+  *:last-child {
+    border-radius:0 .25rem .25rem 0;
+  }
 }
