--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,10 @@ h3 {
   box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
 }
 
+.pinned > .title {
+  display: none;
+}
+
 header {
   background-color: #222;
   color: white;
