Don't break line of images after new day.

--- a/scss/images.scss
+++ b/scss/images.scss
@@ -13,11 +13,16 @@ h1 {
   align-items: center;
   justify-content: flex-start;
 
+  .imgBorder {
+    position: relative;
+  }
+
   .item {
     margin: 1px;
     position: relative;
     overflow: hidden;
     padding: 0;
+    align-self: flex-end;
 
     .select {
       position: absolute;
