--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,7 +68,7 @@ header,.selection {
   line-height: 1;
   user-select: none;
 
-  .title {
+  >.title {
     float: left;
     cursor: pointer;
     font-size: 16px;
