--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,14 @@ h1 {
   }
 }
 
+h1::after {
+  content: ".";
+  clear: both;
+  display: block;
+  visibility: hidden;
+  height: 0px;
+}
+
 h3 {
   padding-left: 5px;
 }
