--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,6 +28,16 @@ h1 {
       margin-top: 5px;
     }
   }
+
+  form.quickedit {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+
+    input, button {
+      font-size: 1em;
+    }
+  }
 }
 
 h1::after {
