--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,8 +34,15 @@ h1 {
     margin: 0;
     padding: 0;
 
-    input, button {
+    input, input:focus {
+      font-family: inherit;
+      font-weight: inherit;
+      color: inherit;
       font-size: 1em;
+      border: 0;
+      margin: 0;
+      padding: 0;
+      outline: none;
     }
   }
 }
