--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ $navigationPanelWidth: 300px;
 @import 'fullscreen';
 @import 'images';
 @import 'options';
+@import 'header';
 
 html {
 }
@@ -79,111 +80,15 @@ h3 {
   position: absolute;
   top: 6px;
   right: 40px;
-  padding: 5px;
+  padding: 3px;
   width: 160px;
 }
 .content {
   transition: 0.3s;
 }
 
-.selection, .searchbar {
-  position: fixed;
-  background-color: $selectedColor;
-  color: white;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  height: 40px;
-  z-index: 850;
-}
-
 .pinned > .title {
   display: none;
-}
-
-header {
-  background-color: #222;
-  color: white;
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  z-index: 100;
-}
-
-.searchbar {
-  ul.form {
-    position: absolute;
-    left: 10px;
-    right: 40px;
-    top: 0;
-    bottom: 0;
-
-    li {
-      width: 100%;
-      margin: 0;
-      padding: 7px 0;
-
-      form {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-
-        input {
-          margin: 0;
-          padding: 2px;
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-
-header,.selection, .searchbar {
-  height: 40px;
-  line-height: 1;
-  user-select: none;
-  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
-
-  >.title {
-    float: left;
-    cursor: pointer;
-    font-size: 16px;
-    padding: 12px;
-  }
-
-  >nav {
-    .left {
-      float: left;
-    }
-
-    .right {
-      float: right;
-    }
-
-    >ul {
-      padding: 0;
-      margin: 0;
-
-      >li {
-        margin: 0;
-        float: left;
-        list-style: none;
-        font-size: 16px;
-        line-height: 1;
-        padding: 12px;
-      }
-
-      >li.btn {
-        cursor: pointer;
-      }
-
-      >li.btn:hover {
-        color: $hoverBackgroundColor;
-      }
-    }
-  }
 }
 
 .pinned {
