--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -13,15 +13,14 @@ a:hover {
 }
 
 .settings {
-  width: 600px;
-  max-width: 90%;
   overflow: auto;
   margin: 0 auto;
 
   table {
     border-spacing: 0;
     border-radius: 3px;
-    width: 100%;
+    margin: 0 auto;
+    width: 90%;
 
     tr:nth-child(even) {background: #f1f1f1}
     tr:nth-child(odd) {background: #FFF}
