--- a/src/scss/fullscreen.scss
+++ b/src/scss/fullscreen.scss
@@ -14,7 +14,12 @@
   }
 
   .panelm {
-    z-index:1200;
+    position: fixed;
+    z-index: 1200;
+
+    > .open {
+      z-index: 3000;
+    }
   }
 
   .faces {
@@ -36,7 +41,7 @@
       .border {
         border-style: solid;
         border-width: 5px;
-        border-color: white;        
+        border-color: white;
         position: absolute;
         cursor: pointer;
 
