--- a/src/scss/fullscreen.scss
+++ b/src/scss/fullscreen.scss
@@ -24,7 +24,6 @@
 
   .faces {
     position: absolute;
-    z-index: 1100;
     top: 0;
     opacity:0;
     transition:opacity 1s linear;
@@ -38,11 +37,15 @@
         bottom: 0;
         z-index: 1110;
       }
+
       .border {
+        position: absolute;
+        z-index: 1160;
+
         border-style: solid;
         border-width: 5px;
         border-color: white;
-        position: absolute;
+
         cursor: pointer;
 
         .resizer {
@@ -87,7 +90,7 @@
         width: 160px;
         height: 20px;
         position: absolute;
-        z-index: 1111;
+        z-index: 1300;
       }
 
       .name {
@@ -119,27 +122,51 @@
       }
 
       .name {
-        z-index: 1150;
+        z-index: 1300;
       }
     }
   }
 
-  .previous {
-    position: absolute;
-    top: 40px;
-    left: 0;
-    bottom: 0;
-    width: 150px;
+  .top {
+    z-index: 1500;
+  }
+
+  .turning {
+    font-size: 70px;
+
+    display:flex;
+    align-items: center; /* Vertical center alignment */
+    justify-content: center; /* Horizontal center alignment */
+
+    min-width: 150px;
+    width: 10%;
     cursor: pointer;
+    z-index: 1150;
+    top: 40px;
+    bottom: 0;
+
+    position: absolute;
+
+    i {
+      display: block;
+      opacity: 0;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      color: white;
+    }
+  }
+
+  .turning:hover {
+    i {
+      opacity: 0.6;
+    }
+  }
+
+  .previous {
+    left: 0;
   }
 
   .next {
-    position: absolute;
-    top: 40px;
     right: 0;
-    bottom: 0;
-    width: 150px;
-    cursor: pointer;
   }
 
   .title {
