--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -10,6 +10,9 @@
   padding: 20px;
   cursor: pointer;
   z-index: 400;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  opacity: 0.6;
 }
 
 .scrollup:hover {
