--- a/src/scss/fullscreen.scss
+++ b/src/scss/fullscreen.scss
@@ -194,10 +194,38 @@
       top: 0;
       right: 10px;
       cursor: pointer;
+
+      > * {
+          padding: 3px 5px;
+          display: inline-block;
+          color: white;
+          text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      }
+
+      > *:hover {
+        color: white;
+      }
     }
   }
 
   .show {
     opacity: 1;
+  }
+
+  .details {
+    padding: 5px;
+    text-align: left;
+
+    h3 {
+      font-weight: 500;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    div {
+      span {
+        font-weight: 500;
+      }
+    }
   }
 }
