Allow reordering images

--- a/src/scss/album.scss
+++ b/src/scss/album.scss
@@ -18,6 +18,12 @@ div.album {
     left: 0;
   }
 
+  .edit {
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
+
   .entry {
     position: absolute;
     top: 0;
